--- a/angular-test-app/src/app/app.component.css
+++ b/angular-test-app/src/app/app.component.css
@@ -290,3 +290,11 @@
       visibility: hidden;
     }
   }
+
+  .bd-color-red{
+    color: red;
+  }
+
+    .bd-color-green{
+    color: green;
+  }
