--- a/angular-test-app/src/app/app.component.html
+++ b/angular-test-app/src/app/app.component.html
@@ -43,12 +43,12 @@
 
 
 
-<!-- <input type="text" [(ngModel)]="myModel.FirstName"
+<input type="text" [(ngModel)]="myModel.FirstName"
   [ngStyle]="myModel.FirstName?.length > 2 ? {color: 'green'} : {color: 'red'}" />
 
 
 
 <input type="text" [(ngModel)]="myModel.FirstName" [ngClass]="classFunction()" />
- -->
+
 
 <router-outlet></router-outlet>
