--- a/angular-test-app/src/app/first/first.component.html
+++ b/angular-test-app/src/app/first/first.component.html
@@ -1,14 +1,37 @@
 <div>
-    <h1>First Component</h1>
-    <p>This is the first component.</p>
-    
-    <input type="text" 
-            [(ngModel)]="dataModel.FirstName" 
-            placeholder="Type FirstName...">
+        <h1>First Component</h1>
+        <p>This is the first component.</p>
 
-    <input type="text" 
-            [(ngModel)]="dataModel.LastName" 
-            placeholder="Type LastName...">
-            
-    <p>You typed: {{ dataModel.FirstName }} {{ dataModel.LastName }}</p>
+        <input type="text" class="form-control" name="FirstName" required [(ngModel)]="dataModel.FirstName"
+                placeholder="Type FirstName...">
+        <input type="text" class="form-control" name="LastName" required [(ngModel)]="dataModel.LastName"
+                placeholder="Type LastName...">
+
+        <p>You typed: {{ dataModel.FirstName }} {{ dataModel.LastName }}</p>
 </div>
+<br />
+<br />
+<br />
+
+
+<input type="text" id="name" name="name" class="form-control" 
+        required minlength="4" appForbiddenName="bob"
+        [(ngModel)]="hero.name" #name="ngModel">
+
+<div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert">
+
+        <div *ngIf="name.errors?.['required']">
+                Name is required.
+        </div>
+        <div *ngIf="name.errors?.['minlength']">
+                Name must be at least 4 characters long.
+        </div>
+        <div *ngIf="name.errors?.['forbiddenName']">
+                Name cannot be Bob.
+        </div>
+
+</div>
+
+
+
+
