--- a/angular-test-app/src/app/app.component.html
+++ b/angular-test-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div role="banner" style="background-color: pink; height: 100px;">
   <a routerLink="/first" >First Page!</a>
   <a routerLink="/second">Second Page!</a>
+  <a routerLink="/rick-and-morty">RICKKKKKKKKKKKKKKK</a>
 </div>
 
 <router-outlet></router-outlet>
